<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="@dimen/dimen10dp"
        android:paddingBottom="@dimen/dimen10dp"
        android:text="@string/appTitle"
        android:textColor="@android:color/white"
        android:textSize="@dimen/titleSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/splithelpimg"
        android:paddingTop="@dimen/dimen10dp"
        android:paddingBottom="@dimen/dimen10dp"
        app:srcCompat="@drawable/splittingbill" />

    <Button
        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/white"
        android:paddingTop="@dimen/dimen10dp"
        android:paddingBottom="@dimen/dimen10dp"
        android:text="@string/splitHelpButton"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="@dimen/buttonSize" />

</LinearLayout>